AC_INIT(sql_ocioracle.c)
AC_REVISION($Revision: 1.10 $)
AC_DEFUN(modname,[rlm_sql_ocioracle])

AC_ARG_WITH(ocilib, [AC_HELP_STRING([--with-ocilib],
                                    [path of the Oracle OCI libraries])],
            [ ocilib="$withval" ], [ ocilib="" ])
AC_ARG_WITH(ociinc, [AC_HELP_STRING([--with-ociinc],
                                    [path of the Oracle OCI includes])],
            [ ociinc="$withval" ], [ ociinc="" ])
AC_ARG_WITH(ociliblib, [AC_HELP_STRING([--with-ociliblib],
                                      [path of the opensource ocilib library])],
            [ ociliblib="$withval" ], [ ocilibliblib="" ])
AC_ARG_WITH(ocilibinc, [AC_HELP_STRING([--with-ocilibinc],
                                      [path of the opensource ocilib library includes])],
            [ ocilibinc="$withval" ], [ ocilibinc="" ])

fail=
sql_ocioracle_ldflags=
sql_ocioracle_cflags=

# Checks for programs.
AC_PROG_CC

CFLAGS="$CFLAGS -Wcomment -Wformat -Wnonnull -Wimplicit-int -Wimplicit \
        -Wmain -Wmissing-braces -Wparentheses -Wsequence-point \
        -Wreturn-type -Wswitch -Wtrigraphs -Wunused-function \
        -Wunused-label -Wunused-value \
        -Wchar-subscripts -Wmissing-declarations -Wmissing-prototypes \
        -Wnested-externs -Wpointer-arith  \
        -Wcast-align -Wall"


# Check for ORACLE Library
LDFLAGS_PRE="$LDFLAGS"
if test x$ocilib != x ; then
    OCILIB="-L$ocilib"
    LDFLAGS="$LDFLAGS -L$ocilib -lclntsh -L$ocilib -lnnz11 -L$ocilib -locci"
fi

AC_CHECK_LIB(clntsh, [ OCIInitialize ], ocilib_present=1,
             ocilib_present=0)
ocilib_present=1

if test $ocilib_present -eq 1 ; then
    OCILIB="$OCILIB -lnnz11 -L$ocilib -locci -L$ocilib -lclntsh"
    LDFLAGS="$LDFLAGS_PRE"
else
    AC_MSG_ERROR("No Oracle libraries founded!!!!")
fi
AC_SUBST(OCILIB)

# Check for Opensource Ocilib library
LDFLAGS_PRE="$LDFLAGS"
if test x$ociliblib != x ; then
    OOCILIB="-L$ociliblib"
    LDFLAGS="$LDFLAGS -L$ociliblib $OCILIB"
else
    LDFLAGS="$LDFLAGS $OCILIB"
fi

AC_CHECK_LIB(ocilib, [ OCI_ConnectionCreate ], oocilib_present=1,
             oocilib_present=0)

if test $oocilib_present -eq 1 ; then
    OOCILIB="$OOCILIB -locilib"
    LDFLAGS="$LDFLAGS_PRE"
else
    AC_MSG_ERROR("No Opensource OCI Library founded!!!!")
fi
AC_SUBST(OOCILIB)


# Check for Oracle includes
CFLAGS_PRE="$CFLAGS"
if test x$ociinc != x ; then
  OCI_INCLUDES="-I$ociinc"
  CFLAGS="$CFLAGS $OCI_INCLUDES"
fi
AC_CHECK_HEADERS([oci.h])
CFLAGS="$CFLAGS_PRE"
AC_SUBST(OCI_INCLUDES)

# Check for Opensource OCIlib includes
CFLAGS_PRE="$CFLAGS"
if test x$ocilibinc != x ; then
    OOCILIB_INCLUDES="-I$ocilibinc"
    CFLAGS="$CFLAGS $OOCILIB_INCLUDES"
fi
AC_CHECK_HEADERS([ocilib.h])
CFLAGS="$CFLAGS_PRE"
AC_SUBST(OOCILIB_INCLUDES)

sql_ocioracle_cflags="$OOCILIB_INCLUDES $OCI_INCLUDES"
sql_ocioracle_ldflags="$OOCILIB $OCILIB"
targetname=modname

dnl Don't change this section.
if test "x$fail" != x; then
	if test "x${enable_strict_dependencies}" = xyes; then
		AC_MSG_ERROR([set --without-]modname[ to disable it explicitly.])
	else
		AC_MSG_WARN([silently not building ]modname[.])
		AC_MSG_WARN([FAILURE: ]modname[ requires:$fail.]);
		targetname=
	fi
fi


AC_SUBST(sql_ocioracle_ldflags)
AC_SUBST(sql_ocioracle_cflags)
AC_SUBST(targetname)
AC_OUTPUT(Makefile)
